--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
-mongoURI="mongodb+srv://root:10xacademy@cluster0.hpnp08y.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URI="mongodb+srv://root:10xacademy@cluster0.hpnp08y.mongodb.net/?retryWrites=true&w=majority"
 JWT_SECRET="JwtSecret"
